--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@
 
         function getCurrentDayIndex() {
             const today = new Date();
-            const todayStr = today.toISOString().split('T')[0];
+            const todayStr =  today.toLocaleDateString('en-CA');
 
             // Check if today is within the prayer schedule dates (Jan 12 - Feb 1, 2026)
             const scheduleStart = new Date('2026-01-12');
