--- a/index.html
+++ b/index.html
@@ -866,7 +866,8 @@
                     "Pray for fresh anointing of the Holy Spirit on all the Preachers, Leaders and Ministers in all the services and fellowships in Makupa 2026.",
                     "Pray that the Lord will restore the first love and open doors for mission and evangelism work to bring more souls to Christ.",
                     "Pray for revival in the Church of Makupa.",
-                    "Pray for all revival meetings, visitations."
+                    "Pray for all revival meetings, visitations.",
+                    "Pray for Thursday and Tuesday felloships that God will draw men to Himself"
                 ]
             },
             {
